escape conditional formatting formulas during xlsx export, fdo#75168

Change-Id: I9ebdb2315b51c2b53d8cfa0486b3ec22a8e0d88d